# impressum-check

./: README.md  pyproject.toml
.github/workflows/: ci.yml
beispiel/: datenschutz.html  impressum.html  index.html
impressumcheck/: __init__.py  cli.py  parse.py  quellen.py  regeln.py
tests/: test_datenschutz.py  test_impressum.py  test_seite.py
tests/fixtures/datenschutz/: ohne-beschwerderecht.html  ohne-verantwortlichen.html
tests/fixtures/impressum/: gmbh-ohne-geschaeftsfuehrer.html  gmbh-ohne-register.html  nur-email.html  ohne-anschrift.html  postfach.html  tmg-veraltet.html  ustid-kaputt.html
tests/fixtures/seite-korrekt/: impressum.html  index.html  ueber.html
tests/fixtures/seite-ohne-impressum/: datenschutz.html  index.html
tests/fixtures/seite-versteckt/: index.html  tief.html
